# ParallelizationForMPC

./: .gitignore  .gitmodules  AUTHORS.md  LICENSE-SUBMODULES.md  LICENSE.md  MPC_Compiler_Misc_Notes.pptx  MPC_Compiler_Misc_Notes_Ishaq_10_20_2021.pptx  Makefile  README.md  biometric_vectorization_example.tex  index.html  index.md  macros.tex  paper.tex  paper_SIMD.tex  prob_stmt_np_hardness.tex
.github/: dependabot.yml
MOTION/src/examples/array_maximum/: CMakeLists.txt  array_maximum_main.cpp
MOTION/src/examples/array_maximum/common/: array_maximum.cpp  array_maximum.h
benchmarks/: UTIL.py  biometric.py  biometric_fast.py  biometric_vectorized.py  chapterfour_figure_12.py  convex_hull.py  count_102.py  count_10s.py  count_123.py  cryptonets_convolution_naive.py  cryptonets_max_pooling.py  db_cross_join.py  db_cross_join_trivial.py  db_variance.py  floyd_warshall.py  gauss_decomp.py  histogram.py  infeasible_edges_example.py  inner_product.py  kmeans_iteration.py  longest_102.py  longest_1s.py  longest_even_0.py  longest_odd_10.py  matrix_multiply.py  max_dist_between_syms.py  max_sum_between_syms.py  minimal_points.py  mnist_relu.py  psi.py
chapterfour/: MakeFile  analysis.tex  bibliography.tex  chapterfour.tex  introduction.tex  language.tex  overview.tex  parallelization.tex  results.tex  schedule.tex  table1.tex  table2.tex  table3.tex  thesis.tex
circuits/: biometric-Bmr-Vectorized.dot  biometric-BooleanGmw-Vectorized.dot  biometric_fast-Bmr-Vectorized.dot  biometric_fast-BooleanGmw-Vectorized.dot  chapterfour_figure_12-Bmr.dot  convex_hull-Bmr.dot  (+64 more)
(+896 files in other folders)
